[package]
name = "caplayer_utils"
version = "0.4.4"
authors = ["davidBertram davidbertram@tuta.com"]
description = "A sample project with wasm-pack"
license = "MIT"
# repository = "https://github.com/teraxtech/hello-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
wasm-bindgen = "0.2.0"
wasm-bindgen-test = "0.2"
